# aneurysm-sim

./: .gitignore  README.md  dashboard.py  pyproject.toml
original/: arterial_GandR.m
results/: eff_stress_CC_0.csv  eff_stress_TC_0.csv  eff_stress_TC_4.csv  sim_CC_score0_run4.feb  sim_CC_score4_run5.feb  sim_TC_score0_run2.feb  sim_TC_score4_run3.feb  sim_TT_score0_run0.feb  sim_TT_score4_run1.feb  x_disp_TT_4.csv
src/aneurysm_sim/: __main__.py  main.py
src/aneurysm_sim/config/: parameters.py
src/aneurysm_sim/data/: eff_stress_CC_0.csv  eff_stress_CC_4.csv  eff_stress_TC_4.csv  eff_stress_TT_0.csv  eff_stress_TT_4.csv  syn_patient_data.csv  x_disp_CC_0.csv  x_disp_CC_4.csv  x_disp_TC_0.csv  x_disp_TC_4.csv  x_disp_TT_0.csv
src/aneurysm_sim/febio/: AneurysmPlugin.cpp  CMakeLists.txt  cylinder_artery.feb  cylinder_artery.fsm  cylinder_artery_v2.feb  cylinder_artery_v3.feb  cylinder_artery_v4.feb  cylinder_artery_v5.feb  cylinder_artery_v5.fsm  cylinder_artery_v6.feb  cylinder_artery_v7.feb  cylinder_with_plugin.feb  febio.xml  febio_plotter.py  febio_runner.py
src/aneurysm_sim/febio/jobs/: GOOD_cylinder_artery_v3.fsps  cylinder_artery.feb  cylinder_artery.xplt  cylinder_artery_v2.feb  cylinder_artery_v3.feb  cylinder_artery_v_3.fsps
src/aneurysm_sim/febio/jobs/jobs/: cylinder_artery_v2.feb  cylinder_artery_v2.xplt
src/aneurysm_sim/febio/results/: sim_CC_score0.feb  sim_CC_score4.feb  sim_TC_score0.feb  sim_TC_score4.feb  sim_TT_score0.feb  sim_TT_score1.feb  sim_TT_score2.feb  sim_TT_score3.feb  sim_TT_score4.feb
src/aneurysm_sim/model/: arterial.py  febio_solver.py  functions.py  model.py  plots.py  xml_writer.py
src/config/: __init__.py  parameters.py
src/model/: arterial.py
