[project]
name = "aneurysm-sim"
version = "0.1.0"
description = "A simulation project for arterial aneurysms."
authors = [
    { name="Zainab Nasser", email="youremail@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    # Add your dependencies here
    "numpy",
    "scipy",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

