[project]
name = "aneurysm-sim"
version = "0.1.0"
description = "A simulation project for intracranial aneurysms."
authors = [
    { name="Zainab Nasser", email="znnasser01@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0",
    "scipy",
    "matplotlib",
    "pandas>=2.2.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aneurysm_sim = ["data/*.csv", "febio/*.feb"]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
aneurysm-sim = "aneurysm_sim.main:main"

